# check-tcex-version

./: .pre-commit-hooks.yaml  README.md  setup.cfg
check_tcex_version/: __metadata__.py  main.py
