[metadata]
name = check_tcex_version
version = 0.0.4
description = A pre-commit hook to check that TCEX version is up to date.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phuerta-tc/check-tcex-version
author = ThreatConnect (support@threatconnect.com)
author_email = support@threatconnect.com
license = Apache License, Version 2
license_file = LICENSE

[options]
install_requires =
    sh
packages = find:
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    check-tcex-version = check_tcex_version.main:main

[bdist_wheel]
universal = True
